@@ -1,3 +1,13 @@
+2007-03-05 Sandro Santilli <strk@refractions.net>
+
+	* tests/xmltester/Makefile.am: enable
+	  run of new testcases.
+
+2007-03-05 Carl Anderson <carl.anderson@vadose.org>
+
+	* tests/xmltester/: hole_from_shell.xml, hole_red.xml:
+	  New testcases for buffer(0).
+
 2007-02-26 Tom Elwertowski
 
 	* source/inlines.cpp: fix for MingW32 builds.
